--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,6 +14,11 @@ body {
     background-color: #fff;
 }
 
+.contentFull {
+    padding: 1rem;
+    background-color: #fff;
+}
+
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
@@ -21,4 +26,12 @@ body {
         margin: 1rem auto;
         border-radius: 1rem;
     }
+    
+    .contentFull {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
+
 }
