--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -122,6 +122,31 @@
     text-align: center;
 }
 
+
+.pokemon p {
+    padding: 0;
+    margin: 0;
+    font-size: medium;
+    color: #fff;
+}
+
+.pokemon .detail .abilities {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .abilities .ability {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+    background-color: #000;
+}
+
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
