--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -11,7 +11,7 @@
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: rgba(38, 128, 0, 0.93);
 }
 
 .fire {
@@ -139,7 +139,7 @@
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .80rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
