--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,274 @@
-.pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+#header {
+  background: -webkit-linear-gradient(left, #a1cef3, azure);
+  background: -o-linear-gradient(left, #a1cef3, azure);
+  background: -moz-linear-gradient(left, #a1cef3, azure);
+  background: -ms-linear-gradient(left, #a1cef3, azure);
+  border-radius: 1rem 1rem 0 0;
+  padding: 0%;
+  margin: 0%;
+  height: min-content;
 }
 
-.normal {
-    background-color: #a6a877;
+#pokeballLogo {
+  margin-left: 1rem;
+  margin-top: 1rem;
+  width: 3rem;
+  height: 3rem;
+  display: inline-block;
+  vertical-align: middle;
 }
 
-.grass {
-    background-color: #77c850;
+#title {
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 2.5rem;
+  color: rgba(0, 0, 0, 0.74);
+  display: inline-block;
+  font-style: italic;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  vertical-align: middle;
+  text-shadow: 1px 2px #00000068;
 }
 
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
+.pokelist {
+  list-style: none;
+  padding: 0%;
+  margin: 0%;
+  display: grid; /*Display com formato de tabela*/
+  grid-template-columns: 1fr; /*Sera o tamanho proporcional do item da grid*/
+  margin-bottom: 2.5rem;
 }
 
 .pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+  margin: 0.5rem;
+  padding: 1rem;
+  padding-bottom: 0.1rem;
+  color: #fff;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column; /*Empurra itens para baixo dele*/
+  box-shadow: 3px 3px #00000040;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
+.pokemon h3 {
+  text-align: justify;
+  font-size: 1.5rem;
+  font-weight: 600;
+  vertical-align: top;
+  margin: 0;
+  padding: 0%;
+  text-transform: capitalize;
+  text-shadow: 2px 2px #00000058;
 }
 
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+.normal {
+  background-color: #a6a877ab;
 }
 
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.grass {
+  background-color: #49d0b0ab;
 }
 
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.fire {
+  background-color: #ee7f30ab;
 }
 
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
+.water {
+  background-color: #678feeab;
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+.electric {
+  background-color: #f7cf2eab;
+}
+
+.ice {
+  background-color: #98d5d7ab;
+}
+
+.ground {
+  background-color: #dfbf69ab;
+}
+
+.flying {
+  background-color: #a98ff0ab;
+}
+
+.poison {
+  background-color: #a040a0ab;
+}
+
+.fighting {
+  background-color: #bf3829ab;
+}
+
+.psychic {
+  background-color: #f65687ab;
+}
+
+.dark {
+  background-color: #725847ab;
+}
+
+.rock {
+  background-color: #b8a137ab;
+}
+
+.bug {
+  background-color: #a8b720ab;
+}
+
+.ghost {
+  background-color: #6e5896ab;
+}
+
+.steel {
+  background-color: #b967cfab;
+}
+
+.dragon {
+  background-color: #6f28f6ab;
+}
+
+.fairy {
+  background-color: #f9aec7ab;
+}
+
+.pokemon span {
+  text-align: right;
+  font-size: 0.8rem;
+  color: rgba(0, 0, 0, 0.411);
+}
+
+.pokemon .details {
+  display: flex;
+  flex-direction: row;
+  align-items: top;
+  justify-content: space-between;
+  padding: 0%;
+}
+
+.pokemon .details .type {
+  padding: 0%;
+  margin: 0%;
+  list-style: none;
+  vertical-align: top;
+  margin-bottom: 0.8rem;
+}
+
+.type li {
+  filter: brightness(0.95);
+  font-size: 0.8rem;
+  padding: 0.2rem 0.5rem;
+  border-radius: 1rem;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.9);
+  margin-top: 0.3rem;
+  margin-bottom: 0.3rem;
+  text-transform: capitalize;
+  box-shadow: 1px 1px #00000088;
+}
+
+.details img {
+  max-width: 100%;
+  height: 80px;
+  align-self: flex-end;
+  vertical-align: bottom;
+  margin-left: 1rem;
 }
 
 .pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
+  background-color: #ed1b24;
+  border-radius: 1rem;
+  width: 33%;
+  height: 4rem;
+  margin: auto;
+  text-align: center;
+  box-shadow: 5px 5px 10px 2px #1d3354;
+  display: flex;
+  align-items: center;
 }
 
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+#loadMorebutton {
+  background-color: whitesmoke;
+  font-size: 1.4rem;
+  border-radius: 1rem;
+  border: 2px solid rgba(0, 0, 0, 0.603);
+  text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin: auto;
+  width: 70%;
+}
+
+#loadMorebutton:hover {
+  border: 3px solid #000;
+  color: rgb(190, 10, 10);
+  font-weight: 600;
+  text-shadow: 1px 1px #00000088;
+}
+
+#endOfPokedex {
+  color: white;
+  text-shadow: 2px 2px #00000088;
+  font-weight: 600;
 }
 
 @media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
+  .pokelist {
+    grid-template-columns: 1fr 1fr;
+  }
+  .details img {
+    height: 85px;
+  }
 }
 
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+@media screen and (min-width: 706px) {
+  .pokelist {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+@media screen and (min-width: 900px) {
+  .pokelist {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .pokelist {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .details img {
+    height: 110px;
+  }
+}
+
+@media screen and (min-width: 560px) {
+  .details img {
+    height: 90px;
+  }
+}
+
+@media screen and (min-width: 996px) {
+  .details img {
+    height: 95px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .pagination {
+    width: 100%;
+  }
+  #loadMorebutton {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .pagination {
+    width: 100%;
+  }
+  #loadMorebutton {
+    font-size: 1.3rem;
+  }
 }
