--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -48,6 +48,12 @@
   display: flex;
   flex-direction: column; /*Empurra itens para baixo dele*/
   box-shadow: 3px 3px #00000040;
+  cursor: pointer;
+}
+
+.pokemon:hover {
+  box-shadow: 3px 3px #00000080;
+  filter: brightness(0.9);
 }
 
 .pokemon h3 {
@@ -161,7 +167,7 @@
   padding: 0.2rem 0.5rem;
   border-radius: 1rem;
   text-align: center;
-  color: rgba(0, 0, 0, 0.9);
+  color: #ffffffb2;
   margin-top: 0.3rem;
   margin-bottom: 0.3rem;
   text-transform: capitalize;
