--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,7 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
@@ -8,12 +9,11 @@ body {
 }
 
 .content {
+    padding: 1rem;
     width: 100vw;
     height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
+    background-color: #ffffff;
 }
-
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
