--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,264 @@
 .pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+  padding: 2rem 1rem;
+  border-radius: 1rem;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
+.pokemonAux {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+  padding: 2rem 1rem;
+  border-radius: 1rem;
+
+  position: fixed;
+  width: 75vw;
+  height: 75vh;
+  z-index: 1;
+  left: 10vw;
+  top: 10vh;
+  background: -webkit-linear-gradient(bottom left, #ffffff 0%, blue 100%);
+  box-shadow: 0px 0px 0px 10000vh rgb(57 56 56 / 87%);
 }
 
 .pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+  color: white;
+  margin-bottom: 0;
+  text-transform: capitalize;
+}
+
+.pokemonAux .nameAux {
+  color: white;
+  margin-bottom: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.pokemon .number {
+  color: #000000;
+  text-align: right;
+  opacity: 0.3;
+}
+
+.pokemonAux .number {
+  color: #000000;
+  text-align: right;
+  opacity: 0.3;
 }
 
 .pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pokemonAux .detailAux {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.pokemonAux .detailAux .types {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.pokemonAux .detailAux .typesAux {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
+  text-align: center;
+  filter: brightness(1.1);
+  color: #fff;
+  padding: .25rem .5rem;
+  margin: .25rem 0;
+  font-size: .625rem;
+  border-radius: 1rem;
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+.pokemonAux .detailAux .typesAux .typeAux {
+  text-align: center;
+  filter: brightness(1.1);
+  color: #fff;
+  padding: .25rem .5rem;
+  margin: .25rem 0;
+  font-size: .625rem;
+  border-radius: 1rem;
+}
+
+.pokemon .detail .img {
+  max-width: 100%;
+  height: 70px;
+}
+
+.pokemonAux .detailAux .imgAux {
+  max-width: 90%;
+  height: 170px;
+}
+
+img:hover {
+  transform: scale(1.05);
 }
 
 .pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+  padding: .25rem .5rem;
+  margin: .25rem 0;
+  font-size: 1.625rem;
+  color: white;
+  background-color: #6a4ef5;
+  border-radius: 0.5rem 0;
+}
+
+.pagination button:hover {
+  transform: scale(0.9);
+}
+
+.pokeDetails section:nth-child(1) {
+  display: flex;
+  justify-content: space-around;
+  text-transform: capitalize;
+  font-weight: 900;
+  max-width: 100%;
+}
+
+.pokeDetails section:nth-child(1) span:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.pokeDetails section:nth-child(2) {
+  max-height: 100%;
+  max-width: 100%;
+  margin-top: 5%;
+
+}
+
+.pokeDetails section:nth-child(2) table {
+  height: 100%;
+  width: 100%;
+  color: #333;
+}
+
+.pokeDetails section:nth-child(2) table tr td:first-child {
+  color: #111;
+  font-weight: 400;
+}
+
+.pokeDetails section:nth-child(2) table tr td:not(td:first-child) {
+  color: #222;
+  font-weight: 300;
 }
 
 @media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .pokeDetails section:nth-child(2) {
+    margin-top: 10%;
+  }
 }
 
 @media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .pokemonAux .detailAux .typesAux .typeAux {
+    padding: .25rem .9rem;
+    margin: .25rem 0.5rem;
+    font-size: 1rem;
+  }
+
+  .pokeDetails section:nth-child(2) {
+    margin-top: 20%;
+  }
+
+  .pokeDetails section:nth-child(1) {
+    letter-spacing: 1px;
+    font-size: 1.3rem;
+    margin-bottom: -50px;
+
+  }
+
+  .pokeDetails section:nth-child(2) table tr td:first-child {
+    font-weight: 800;
+    font-size: large;
+  }
+
+  .pokeDetails section:nth-child(2) table tr td:nth-child(2) {
+    padding-left: 2%;
+    font-weight: 500;
+  }
+
 }
 
 @media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  .pokeDetails section:nth-child(1) {
+    letter-spacing: 1px;
+    font-size: 1.4rem;
+    margin-bottom: -120px;
+  }
+
+  .pokeDetails section:nth-child(2) table tr td:first-child {
+    padding-left: 50px;
+    font-weight: 800;
+    font-size: large;
+  }
+
+  .pokeDetails section:nth-child(2) table tr td:nth-child(2) {
+    padding-left: 5%;
+    font-weight: 600;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .pokeDetails section:nth-child(1) {
+    letter-spacing: 1px;
+    font-size: 1.4rem;
+    margin-bottom: -95px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .pokeDetails section:nth-child(1) {
+    letter-spacing: 1px;
+    font-size: 1.4rem;
+    margin-bottom: -150px;
+  }
 }
