--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -88,7 +88,7 @@
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: 3;
     text-align: right;
     font-size: .625rem;
 }
@@ -103,7 +103,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .pokemon .detail .types {
@@ -125,6 +125,7 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+    width: 110px;
 }
 
 .pagination {
@@ -139,7 +140,7 @@
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 1.2rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
