Update readme and fix bugs

--- a/assets/css/modalDetalhes.css
+++ b/assets/css/modalDetalhes.css
@@ -57,7 +57,7 @@
     justify-content: center;
 }
 
-.types {
+.typesOpen {
     display: flex;
     align-items: center;
     justify-content: center;
