--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -103,7 +103,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .pokemon .detail .types {
@@ -125,7 +125,6 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
-    width: 110px;
 }
 
 .pagination {
