Add button hover

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -145,6 +145,9 @@
     border: none;
     border-radius: 1rem;
 }
+button:hover{
+    background-color: #384ce6;
+}
 
 @media screen and (min-width: 380px) {
     .pokemons {
