--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,39 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    outline: 0;
+    list-style: none;
+    scroll-behavior: smooth;
 }
 
 body {
-    background-color: #f6f8fc;
+    font-family: 'roboto', sans-serif;
+    background-color: #ccc;
 }
 
-.content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
+section {
+    margin: 10px auto;
+    border-radius: 1rem;
     background-color: #fff;
+    padding: 1rem;
+    text-align: center;
+    max-width: 1000px;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+.section-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    margin-bottom: 20px;
+}
+
+h1 {
+    font-size: 32px;
+}
+
+.logo {
+    width: 32px;
+    height: 32px;
 }
