--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,9 +1,9 @@
 .pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
     margin: 0;
     padding: 0;
+    display: grid;
     list-style: none;
+    grid-template-columns: 1fr;
 }
 
 .normal {
@@ -78,12 +78,13 @@
     background-color: #f9aec7;
 }
 
+
 .pokemon {
+    margin: 0.5rem;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
 }
 
 .pokemon .number {
@@ -94,25 +95,25 @@
 }
 
 .pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
+    color: white;
     margin-bottom: .25rem;
+    text-transform: capitalize;
 }
 
-.pokemon .detail {
+.pokemon .details {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
+.pokemon .details .types {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
+.pokemon .details .types .type {
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
@@ -122,9 +123,10 @@
     text-align: center;
 }
 
-.pokemon .detail img {
+.pokemon .details img {
     max-width: 100%;
     height: 70px;
+    align-self: flex-end;
 }
 
 .pagination {
@@ -133,32 +135,32 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem; 
 }
 
 .pagination button {
+    background-color: #6C79DB;
+    color: white;
+    border: none;
+    border-radius: 1rem;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
 }
 
-@media screen and (min-width: 380px) {
+@media screen and (min-width: 380px){
     .pokemons {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 576px){
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px){
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
