--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,228 @@
+body {
+  background-color:  #3D9BCB;
+}
+.content {
+  filter: drop-shadow(-8px 5px 10px #000);
+  background-color: #f5f5f5;
+  border-bottom: 2px solid #e0e0e0;
+  padding: 10px;
+  text-align: center;
+}
+
+.content h1 {
+  font-family: "Arial", sans-serif;
+  font-size: 28px;
+  color: #333;
+  margin: 0;
+}
 .pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin: 0;
+  padding: 20px;
+  list-style: none;
+
+  height: 75vh;
+  overflow-y: auto;
 }
 
 .normal {
-    background-color: #a6a877;
+  background-color: #a6a877;
 }
 
 .grass {
-    background-color: #77c850;
+  background-color: #77c850;
 }
 
 .fire {
-    background-color: #ee7f30;
+  background-color: #ee7f30;
 }
 
 .water {
-    background-color: #678fee;
+  background-color: #678fee;
 }
 
 .electric {
-    background-color: #f7cf2e;
+  background-color: #f7cf2e;
 }
 
 .ice {
-    background-color: #98d5d7;
+  background-color: #98d5d7;
 }
 
 .ground {
-    background-color: #dfbf69;
+  background-color: #dfbf69;
 }
 
 .flying {
-    background-color: #a98ff0;
+  background-color: #a98ff0;
 }
 
 .poison {
-    background-color: #a040a0;
+  background-color: #a040a0;
 }
 
 .fighting {
-    background-color: #bf3029;
+  background-color: #bf3029;
 }
 
 .psychic {
-    background-color: #f65687;
+  background-color: #f65687;
 }
 
 .dark {
-    background-color: #725847;
+  background-color: #725847;
 }
 
 .rock {
-    background-color: #b8a137;
+  background-color: #b8a137;
 }
 
 .bug {
-    background-color: #a8b720;
+  background-color: #a8b720;
 }
 
 .ghost {
-    background-color: #6e5896;
+  background-color: #6e5896;
 }
 
 .steel {
-    background-color: #b9b7cf;
+  background-color: #b9b7cf;
 }
 
 .dragon {
-    background-color: #6f38f6;
+  background-color: #6f38f6;
 }
 
 .fairy {
-    background-color: #f9aec7;
+  background-color: #f9aec7;
 }
 
 .pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+  padding: 1rem;
+  border-radius: 1rem;
+
+  border: 2px solid #000;
+}
+
+.pokemon:hover {
+  border: 4px solid black;
+  opacity: 100%;
+
+  box-shadow: 0 0 10px #000;
+  transform: scale(1.25);
+  transition: all 0.5s ease;
+  z-index: 1;
 }
 
 .pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
+  color: #000;
+  opacity: 0.3;
+  text-align: right;
+  font-size: 0.625rem;
 }
 
 .pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+  text-transform: capitalize;
+  color: #fff;
+  margin-bottom: 0.25rem;
 }
 
 .pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.pokemon .detail .stats {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(75px, 1fr));
+  align-items: start;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  font-size: 0.625rem;
+}
+
+.pokemon .detail .stats .stat {
+  border-radius: 1rem;
+  background-color: #fff;
+
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem 0;
+  border: 1px solid #000;
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem 0;
+  font-size: 0.625rem;
+  border-radius: 1rem;
+  filter: brightness(1.1);
+  text-align: center;
+
+  border: 1px solid #000;
+  
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
+.pokemon img {
+  height: 70px;
+  max-width: 100%;
 }
 
 .pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  margin: 0.25rem 0;
+  font-size: 1.5rem;
+  color: #fff;
+  background-color: #6c79db;
+  border: none;
+  border-radius: 1rem;
+
+  box-shadow: #000;
+  cursor: pointer;
+}
+
+.pagination button:hover {
+  filter: brightness(1.1);
 }
 
 @media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 @media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
