--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,14 +4,14 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: red;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: blue;
 }
 
 @media screen and (min-width: 992px) {
