--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,6 +14,10 @@ body {
     background-color: #fff;
 }
 
+.content li {
+    cursor: pointer;
+}
+
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
