--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -139,9 +139,9 @@
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 2rem;
     color: #fff;
-    background-color: #6c79db;
+    background-color: #77c850;
     border: none;
     border-radius: 1rem;
 }
