--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
 body {
     text-transform: capitalize;
-    width: 440px;
+    width: 390px;
     margin: auto;
 }
 
@@ -57,8 +57,7 @@ span {
 .poke-data-details {
     background-color: #fff;
     border-radius: 7% 7% 7% 7%;
-    padding: 2.5em .5em .5em 1.2em;
-    min-height: 560px;
+    padding: 2.5em .5em .5em .2em;
 }
 
 table {    
@@ -66,10 +65,6 @@ table {
     width: 100%;
     align-items: start;
     text-align: left;
-}
-
-.poke-about-headline th {
-    width: 130px;
 }
 
 table thead {
@@ -103,7 +98,7 @@ table tbody tr td {
 /* change table content behaviour */
 
 .active-header {
-border-bottom: 2px solid black;
+    border-bottom: 1px solid black;
 }
 
 .hide {
@@ -112,4 +107,52 @@ border-bottom: 2px solid black;
 
 .show {
     display: table-row;
+}
+
+.about {
+    padding-left: 12px;
+}
+
+.base-stats {
+    min-width: 120px;
+}
+.about, .evolution, .moves {
+    width: 90px;
+}
+
+/* Styles for the gauge */
+.gauge {
+    background-color: #e0e0e0;
+    width: 100%;
+    height: 5px;
+    position: relative;
+}
+
+.fill-green {
+    background-color: #4caf50;
+    height: 100%;
+    position: absolute;
+}
+
+.fill-red {
+    background-color: #d14242;
+    height: 100%;
+    position: absolute;
+}
+
+.stat-name {
+    width: 40px;
+    color: #000;
+}
+
+.stat-number {
+    max-width: 35px;
+}
+
+.stat-gauge {
+    width: 300px;
+}
+
+.text-stype {
+    text-transform: none;   
 }
