--- a/assets/css/pokemon-list.css
+++ b/assets/css/pokemon-list.css
@@ -6,84 +6,18 @@
     list-style: none;
 }
 
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
 .pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+
+    &:hover {
+        transform: scale(1.03);
+        cursor: pointer;
+        box-shadow: 3px 3px 3px 3px #acabab;
+    }
 }
 
 .pokemon .number {
@@ -137,13 +71,19 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: 0.4rem 1.5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .0.8rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+
+    &:hover {
+        transform: scale(1.03);
+        cursor: pointer;
+        box-shadow: 3px 3px 3px 3px #acabab;
+    }
 }
 
 @media screen and (min-width: 380px) {
