--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -164,3 +164,34 @@ table tr td:nth-child(2) {
 h4 {
     color: #000;
 }
+
+/* Moves section */
+#autocomplete-list {
+    max-height: 390px;
+    overflow-y: auto;
+    z-index: 99; 
+    background-color: white;
+}
+
+#autocomplete-list div {
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+}
+
+#autocomplete-list div:hover {
+    background-color: #e9e9e9;
+}
+
+#move-details {
+    margin-top: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    text-align: left;
+    border-radius: 5%;
+}
+
+#move-details a {
+    color: black;
+}
