--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,8 +84,24 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    position: relative;
 }
 
+.pokeball {
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90px;
+    height: 90px;
+    z-index: 0;
+}
+
+.pokeball img {
+    width: 100%;
+    height: 100%;
+    filter: opacity(0.05);
+}
 .pokemon .number {
     color: #000;
     opacity: .3;
@@ -125,6 +141,8 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+    position: relative;
+    z-index: 1;
 }
 
 .pagination {
