--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,12 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+.pokemon:hover{
+    scale: 1.1;
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
 }
 
 .pokemon .number {
