Adição de Modal de Detalhe

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,12 +1,10 @@
-* {
+*{
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
-
 body {
     background-color: #f6f8fc;
 }
-
 .content {
     width: 100vw;
     height: 100vh;
@@ -14,11 +12,13 @@ body {
     background-color: #fff;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+@media screen and  (min-width: 768px){
+    .content{
+        max-width: 768px;
     }
 }
+
+.content h1{
+    margin: 0;
+}
+
