--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,130 +1,84 @@
-.pokemons {
+.content h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+.content .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
+
     list-style: none;
+
+    padding: 0;
+    margin: 0;
 }
 
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
-.pokemon {
+.content .pokemons .pokemon{
     display: flex;
     flex-direction: column;
+
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
+.content .pokemons .pokemon .name{
     text-transform: capitalize;
     color: #fff;
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
 }
 
-.pokemon .detail {
+
+.content .pokemons .pokemon .detail{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
+.content .pokemons .pokemon .detail .types {
     padding: 0;
-    margin: 0;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
+.content .pokemons .pokemon .detail .types .type{
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
     border-radius: 1rem;
+    font-size: .625rem;
     filter: brightness(1.1);
     text-align: center;
 }
 
-.pokemon .detail img {
+.content .pokemons .pokemon .detail img{
     max-width: 100%;
     height: 70px;
+    align-self: flex-end;
+}
+
+.content .pokemons .pokemon .number {
+    text-align: right;
+    color: #000;
+    font-size: .625rem;
+    opacity: 0.3;
+}
+
+.detailsBtn {
+    width: 30%;
+    border: none;
+    border-radius: 1rem;
+    background-color: #FF1616;
+    font-size: .625rem;
+    color: #fff;
+    align-self: center;
+}
+
+.detailsBtn:hover {
+    cursor: pointer;
+
+    transform: scale(1.1);
+    box-shadow: 0 0 5px #000000;
+    transition: all 0.5s;
 }
 
 .pagination {
@@ -136,30 +90,87 @@
     padding: 1rem;
 }
 
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
+.pagination button{
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-@media screen and (min-width: 380px) {
-    .pokemons {
+.pagination button:hover{
+    cursor: pointer;
+
+    transform: scale(1.1);
+    box-shadow: 0 0 5px #6c79db;
+    transition: all 0.5s;
+}
+
+.pagination button img{
+    width: 25%;
+}
+
+.links-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.links-footer a{
+    text-decoration: none;
+    width: 50px;
+    margin-right: 10px;
+}
+
+.links-footer a img{
+    width: 100%;
+}
+
+.links-footer p {
+    margin-right: 10px;
+    font-size: 20px;
+    font-weight: 700;
+}
+@media screen and  (min-width: 380px){
+    .content .pokemons {
         grid-template-columns: 1fr 1fr;
     }
+    .pagination button {
+        width: 25%;
+    }
 }
 
-@media screen and (min-width: 576px) {
-    .pokemons {
+@media screen and  (min-width: 576px){
+    .content .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    .pagination button {
+        width: 20%;
+    }
+    
 }
 
-@media screen and (min-width: 992px) {
-    .pokemons {
+@media screen and  (min-width: 992px){
+    .content{
+        max-width: 992px;
+        width: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
+
+    .content .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
+
+    .pagination button {
+        width: 10%;
+    }
+    
 }
