--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,16 +9,79 @@ body {
 
 .content {
     width: 100vw;
-    height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #FFF;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+.content h1 {
+    margin: 0;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    border-radius: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    min-height: 500px;
+}
+
+.modalPokemon {
+    display: flex;
+    border-radius: 1rem;
+    padding: 1rem;
+    flex-direction: column;
+}
+
+.modalNumber {
+    color: #000;
+    opacity: .3;
+    text-align: right;
+    font-size: 1rem;
+}
+
+.modalName {
+    text-transform: capitalize;
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.modalDetail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modalTypes {
+    padding: 0;
+    margin: 1rem 0;
+    list-style: none;
+    width: 100%;
+}
+
+.modalType {
+    color: #fff;
+    font-size: 1.1rem;
+    border-radius: 1.1rem;
+    filter: brightness(1.1);
+    padding: 0.45rem 0.6rem;
+    margin: 0.3rem 0;
+    background-color: #0000002b;
+    letter-spacing: .7px;
+    text-align: center;
+}
+
+.modalDetail img {
+    margin-top: 1.5rem;
+    max-width: 100%;
 }
